--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
             <header class="header-hero row">
                 <ul class="nav">
                     <li class="nav-item">
-                    <a class="nav-link" href="#">The Queen city</a>
+                        <a class="nav-link" href="#">The Queen city</a>
                     </li>
                     <li class="nav-item">
-                    <a class="nav-link" href="#">My Reservations</a>
+                        <a class="nav-link" href="#">My Reservations</a>
                     </li>
                     <li class="nav-item">
-                    <a class="nav-link" href="#">Guide</a>
+                        <a class="nav-link" href="#">Guide</a>
                     </li>
                 </ul>
                 <div class="col-md-12">
@@ -88,6 +88,15 @@
                     </div>
                 </div>
             </section>
+            <footer class="container-fluid footer text-center">
+                <div class="row mx-auto col-md-2">
+                    <a class="social facebook mx-auto" href="#" alt="facebook"></a>
+                    <a class="social twitter mx-auto" href="#" alt="twitter"></a>
+                    <a class="social instagram mx-auto" href="#" alt="Instagram"></a>
+                </div>
+                <br>
+                <small>© 2004-2017 Visit Charlotte. All Rights Reserved. 500 S. College Street, Suite 300, Charlotte, NC 28202</small>
+            </footer>
         </div> 
         <script src="js/jquery/jquery.js"></script>
         <script src="helper/calendario/calendarIO.js"></script>
@@ -104,7 +113,16 @@
 
                 let filtered = null; // customData to filter he is modified every change in range and stars
 
+                // selectors
+                const checkin  = $('#check_in'),
+                      checkout = $('#check_out');
+
                 $('.btn-search').on('click',function(){ 
+
+                    if(checkin.text() == 'Chose a date' || checkout.text() == 'Chose a date'){
+                        return false;
+                    }
+
                     let searchData = $(this)[0].dataset;
                     $.ajax({
                         type: "GET",
@@ -117,7 +135,7 @@
 
                         const htmlTemplate = (dt) => {
                             let html = `<header class="header-page text-center">
-                                            <p>Best choices between ${$('#check_in').html()} and ${$('#check_out').html()}</p>
+                                            <p>Best choices between ${checkin.html()} and ${checkout.html()}</p>
                                         </header>`;
                             let hotels = dt;
 
